--- a/package.json
+++ b/package.json
@@ -16,13 +16,14 @@
     "@tailwindcss/vite": "^4.1.11",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
-    "astro": "5.12.9",
+    "astro": "5.13.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.23.9",
     "lucide-react": "^0.525.0",
     "motion": "^12.23.9",
     "npm": "^11.5.1",
+    "pocketbase": "^0.26.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "tailwind-merge": "^3.3.1",
