--- a/package.json
+++ b/package.json
@@ -10,27 +10,29 @@
   },
   "dependencies": {
     "@astrojs/react": "^4.3.0",
-    "@radix-ui/react-accordion": "^1.2.11",
-    "@radix-ui/react-dialog": "^1.1.14",
-    "@radix-ui/react-navigation-menu": "^1.2.13",
+    "@radix-ui/react-accordion": "^1.2.12",
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-navigation-menu": "^1.2.14",
     "@radix-ui/react-slot": "^1.2.3",
-    "@tailwindcss/vite": "^4.1.11",
-    "@types/react": "^19.1.8",
-    "@types/react-dom": "^19.1.6",
+    "@tailwindcss/vite": "^4.1.12",
+    "@types/react": "^19.1.12",
+    "@types/react-dom": "^19.1.9",
     "astro": "5.13.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "framer-motion": "^12.23.9",
+    "framer-motion": "^12.23.12",
     "lucide-react": "^0.525.0",
-    "motion": "^12.23.9",
-    "npm": "^11.5.1",
+    "motion": "^12.23.12",
+    "next-themes": "^0.4.6",
+    "npm": "^11.5.2",
     "pocketbase": "^0.26.2",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.11"
+    "tailwindcss": "^4.1.12"
   },
   "devDependencies": {
-    "tw-animate-css": "^1.3.6"
+    "tw-animate-css": "^1.3.7"
   }
 }
