--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "astro": "5.13.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "framer-motion": "^12.23.12",
     "lucide-react": "^0.525.0",
     "motion": "^12.23.12",
