--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/cloudflare": "^12.6.7",
     "@astrojs/node": "^9.4.3",
     "@astrojs/react": "^4.3.0",
     "@radix-ui/react-accordion": "^1.2.12",
