--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "pocketbase": "^0.26.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
+    "simple-datatables": "^10.0.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.12"
