--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/cloudflare": "12.6.8",
-    "@astrojs/node": "^9.4.3",
-    "@astrojs/react": "4.3.1",
+    "@astrojs/cloudflare": "12.6.10",
+    "@astrojs/node": "9.5.0",
+    "@astrojs/react": "4.4.1",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-navigation-menu": "^1.2.14",
@@ -19,7 +19,7 @@
     "@tailwindcss/vite": "^4.1.12",
     "@types/react": "^19.1.12",
     "@types/react-dom": "^19.1.9",
-    "astro": "5.13.9",
+    "astro": "5.15.3",
     "chart.js": "^4.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
