--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@astrojs/cloudflare": "12.6.10",
-    "@astrojs/node": "9.5.0",
+    "@astrojs/node": "^9.5.1",
     "@astrojs/react": "4.4.1",
     "@nurodev/astro-bun": "^2.1.1",
     "@radix-ui/react-accordion": "^1.2.12",
