feat:nambah statistik di survei

--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "astro": "astro"
   },
   "dependencies": {
-    "@astrojs/cloudflare": "12.6.10",
+    "@astrojs/cloudflare": "12.6.12",
     "@astrojs/node": "^9.5.1",
-    "@astrojs/react": "4.4.1",
+    "@astrojs/react": "4.4.2",
     "@nurodev/astro-bun": "^2.1.1",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-dialog": "^1.1.15",
@@ -19,9 +19,10 @@
     "@radix-ui/react-navigation-menu": "^1.2.14",
     "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/vite": "^4.1.12",
+    "@types/papaparse": "^5.5.2",
     "@types/react": "^19.1.12",
     "@types/react-dom": "^19.1.9",
-    "astro": "5.15.3",
+    "astro": "5.16.5",
     "chart.js": "^4.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -31,6 +32,7 @@
     "motion": "^12.23.12",
     "next-themes": "^0.4.6",
     "npm": "^11.5.2",
+    "papaparse": "^5.5.3",
     "pocketbase": "^0.26.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
