--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@astrojs/cloudflare": "12.6.12",
-    "@astrojs/node": "^9.5.1",
+    "@astrojs/node": "9.5.4",
     "@astrojs/react": "4.4.2",
     "@nurodev/astro-bun": "^2.1.1",
     "@radix-ui/react-accordion": "^1.2.12",
@@ -22,7 +22,7 @@
     "@types/papaparse": "^5.5.2",
     "@types/react": "^19.1.12",
     "@types/react-dom": "^19.1.9",
-    "astro": "5.16.5",
+    "astro": "5.17.3",
     "chart.js": "^4.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
